added gapminder data and updated materials

--- a/novice/r/02-data-types.Rmd
+++ b/novice/r/02-data-types.Rmd
@@ -1,3 +1,6 @@
+```{r, echo=FALSE}
+opts_chunk$set(results='hide')
+```
 
 # Data types and structures
 
@@ -11,54 +14,6 @@ To make the best of the R language you'll need:
 Dealing with object conversions is commonly frustrating for beginners.
 Mastering this knowledge will make your continued experience much more pleasant.
 
----
-
-### **Everything** in R is an object.
-
-R has 6 atomic classes.
-
-* character
-* numeric (real or decimal)
-* integer
-* logical
-* complex
-* raw
-
----
-
-
-By *atomic*, we mean the vector only holds data of a single type.
- 
- * **character**: `"a"`, `"swc"`
- * **numeric**: `2`, `15.5`
- * **integer**: `2L` (the `L` tells R to store this as an integer)
- * **logical**: `TRUE`, `FALSE`
- * **complex**: `1+4i` (complex numbers with real and imaginary parts)
----
-
-R provides many functions to examine features of vectors and other objects, for example
-
-* `typeof()` - what is it?  
-* `length()` - how long is it? What about two dimensional objects?  
-* `attributes()` - does it have any metadata?  
-
-```{r}
-# Example
-x <- "dataset"
-typeof(x)
-attributes(x)
-
-y <- 1:10
-y
-typeof(y)
-length(y)
-
-z <- as.numeric(y)
-typeof(z)
-```
-
----
-
 ### Data structures
 
 R has many __data structures__. These include
@@ -68,8 +23,6 @@ R has many __data structures__. These include
 * matrix
 * data frame
 * factors
-
----
 
 ### Vectors
 
@@ -82,11 +35,15 @@ Technically, vectors can be one of two types:
 
 although the term "vector" most commonly refers to the atomic types not lists.
 
----
-
 **Atomic Vectors**
 
-An atomic vector holds values that are all of the same type (e.g `character`, `logical`, `numeric`, ...)
+By *atomic*, we mean the vector only holds data of a single type.
+ 
+ * **character**: `"a"`, `"swc"`
+ * **numeric**: `2`, `15.5`
+ * **integer**: `2L` (the `L` tells R to store this as an integer)
+ * **logical**: `TRUE`, `FALSE`
+ * **complex**: `1+4i` (complex numbers with real and imaginary parts)
 
 You can create an empty vector with `vector()` 
 By default the mode is `logical`. You can be more explicit as shown in the examples below. 
@@ -100,6 +57,7 @@ character(5) ## character vector of length 5
 numeric(5)
 logical(5)
 ```
+ 
 
 ### Creating vectors with values
 
@@ -126,11 +84,16 @@ z <- c("Sarah", "Tracy", "Jon")
 
 **Examine your vectors**
 
+R provides many functions to examine features of vectors and other objects, for example
+
+* `typeof()` - what is it?  
+* `length()` - how long is it?  
+
 ```{r}
+# Example
 typeof(z)
 length(z)
-class(z)
-str(z)
+
 ```
 
 ---
@@ -139,8 +102,17 @@ You can also create vectors by generating a sequence of numbers
 
 ```{r}
 series <- 1:10
+series
 seq(10)
 seq(1, 10, by = 0.1)
+```
+
+Atomic vectors are flat, and nesting c()s just creates a flat vector:
+```{r}
+c(1, c(2, c(3, 4)))
+
+# the same as
+c(1, 2, 3, 4)
 ```
 
 **Add an element to a vector**
@@ -148,8 +120,11 @@ seq(1, 10, by = 0.1)
 ```{r}
 z
 z <- c(z, "Annette")
+z
+
 ```
 
+**Special values**
 
 `Inf` is infinity. You can have either positive or negative infinity.
 
@@ -163,25 +138,12 @@ z <- c(z, "Annette")
 0/0
 ```
 
-Objects can have __attributes__. Attribues are part of the object. These include:
-
-* names
-* dimnames
-* dim
-* class
-* attributes (contain metadata)
-
-You can also glean other attribute-like information such as length (works on vectors and lists) or number of characters (for character strings).
-
-```{r}
-length(1:10)
-nchar("Software Carpentry")
-```
 
 **What happens when you mix types?**
 
 R will create a resulting vector that is the least common denominator. The coercion will move towards the one that's easiest to __coerce__ to.
 
+### Challenge
 Guess what the following do without running them first
 
 ```{r}
@@ -197,73 +159,32 @@ as.numeric()
 as.character()
 ```
 
-### Matrix
-
-In R matrices are an extension of the numeric or character vectors. They are not a separate type of object but simply an atomic vector with dimensions; the number of rows and columns.
-
-```{r}
-m <- matrix(nrow = 2, ncol = 2)
-m
-dim(m)
-```
-
-Matrices in R are filled column-wise.
-
-```{r}
-m <- matrix(1:6, nrow = 2, ncol = 3)
-```
-
-Other ways to construct a matrix
-
-```{r}
-m      <- 1:10
-dim(m) <- c(2, 5)
-```
-
-This takes a vector and transform into a matrix with 2 rows and 5 columns.
-
-Another way is to bind columns or rows using `cbind()` and `rbind()`.
-
-```{r}
-x <- 1:3
-y <- 10:12
-cbind(x, y)
-rbind(x, y)
-```
-
-You can also use the byrow argument to specify how the matrix is filled. From R's own documentation:
-
-```{r}
-mdat <- matrix(c(1,2,3, 11,12,13), nrow = 2, ncol = 3, byrow = TRUE,
-               dimnames = list(c("row1", "row2"),
-                               c("C.1", "C.2", "C.3")))
-mdat
-```
-
 ### List
 
-In R lists act as containers. Unlike atomic vectors, the contents of a list are not restricted to a single mode and can encompass any mixture of data types. Lists are sometimes called generic vectors, because the elements of a list can by of any type of R object, even lists containing further lists. This property makes them fundamentally different from atomic vectors.
-
-A list is a special type of vector. Each element can be a different type.
-
-Create lists using `list()` or coerce other objects using `as.list()`. An empty list of the required length can be created using `vector()`
+Lists are different from atomic vectors in that they can contain any other type of vector, including lists. You construct them using list() instead of c(). Coerce an atomic vector to a list by `as.list()`
 
 ```{r}
 x <- list(1, "a", TRUE, 1+4i)
-x
-
-
-x <- vector("list", length = 5) ## empty list
+str(x)
 length(x)
-x[[1]]
 
 x <- 1:10
 x <- as.list(x)
 length(x)
 ```
 
-1. What is the class of `x[1]`?
-2. What about `x[[1]]`?
+to get values out from a list:
+
+```{r}
+x[1] #gives back a new list, holding the corresponding value
+x[[1]] #gives back a value
+
+```
+
+Elements are indexed by double brackets. Single brackets will still return a(nother) list.
+
+
+Generating a more complex list
 
 ```{r}
 xlist <- list(a = "Karthik Ram", b = 1:10, data = head(iris))
@@ -272,40 +193,61 @@ xlist
 
 1. What is the length of this object? What about its structure?
 
-Lists can be extremely useful inside functions. You can “staple” together lots of different kinds of results into a single object that a function can return.
+Lists can be extremely useful inside functions.
+You can “staple” together lots of different kinds of results into a single object that a function can return.
 
 A list does not print to the console like a vector. Instead, each element of the list starts on a new line.
 
-Elements are indexed by double brackets. Single brackets will still return a(nother) list.
+### Attributes
+All objects can have arbitrary additional attributes.
+These can be thought of as a named list. 
+Attributes can be accessed individually with attr() or all at once (as a list) with `attributes()`.
+
+```{r}
+x <- list("filename"="myFile.txt","path"="/tmp")
+typeof(x)
+attributes(x)
+
+y <- c("mySecondFile.txt","/tmp")
+names(y) <- c("otherFilename","/tmp")
+attributes(y)
+```
 
 
 ### Factors
 
-Factors are special vectors that represent categorical data. Factors can be ordered or unordered and are important for modelling functions such as `lm()` and `glm()` and also in `plot` methods.
+A factor is a vector that can contain only predefined values.
+It is R's structure for dealing with qualitative data.
 
-Once created factors can only contain a pre-defined set values, known as *levels*.
+A factor is not an atomic vector, but it's built on top of an integer vector.
 
-Factors are stored as integers that have labels associated the unique integers. While factors look (and often behave) like character vectors, they are actually integers under the hood, and you need to be careful when treating them like strings. Some string methods will coerce factors to strings, while others will throw an error.
-
-Sometimes factors can be left unordered. Example: male, female.
-
-Other times you might want factors to be ordered (or ranked). Example: low, medium, high.
-
-Underlying it's represented by numbers 1, 2, 3.
-
-They are better than using simple integer labels because factors are what are called self describing. male and female is more descriptive than 1s and 2s. Helpful when there is no additional metadata.
-
-Which is male? 1 or 2? You wouldn't be able to tell with just integer data. Factors have this information built in.
-
-Factors can be created with `factor()`. Input is often a character vector.
+Factors have two key attributes: their class(), "factor", which controls their behaviour;
+and their levels(), the set of allowed values.
 
 ```{r}
 x <- factor(c("yes", "no", "no", "yes", "yes"))
 x
+class(x)
+levels(x)
 ```
 
-`table(x)` will return a frequency table counting the number of elements in each level.
+You can't use values that are not in the levels
+```{r}
+x[2] <- "c"
+```
 
+Factors look (and often behave) like character vectors, but are actually 
+stored as integers, with labels associated the unique integers.
+
+You need to be careful when treating them like strings.
+Some string methods will coerce factors to strings, while others will throw an error.
+```{r}
+paste("value:",x)
+nchar(x) #error
+nchar("test")
+```
+
+For this reason, it's usually best to explicitly convert factors to strings when modifying their levels.
 If you need to convert a factor to a character vector, simply use
 
 ```{r}
@@ -320,12 +262,100 @@ as.numeric(f) ## wrong!
 as.numeric(as.character(f))
 ```
 
-In modeling functions, it is important to know what the baseline level is. This is the first factor but by default the ordering is determined by alphabetical order of words entered. You can change this by speciying the levels (another option is to use the function relevel).
+Also, you can not combine factors
+
+```{r}
+c(factor("a"), factor("b"))
+```
+
+
+**Ordering factors**
+
+In modeling functions, it is important to know what the baseline level is. This is the first factor but by default the ordering is determined by alphabetical order of words entered. You can change this by speciying the levels.
 
 ```{r}
 x <- factor(c("yes", "no", "yes"), levels = c("yes", "no"))
 x
 ```
+
+Factors are useful when you know the possible values a variable may take, 
+even if you don't see all values in a given dataset.
+
+Using a factor instead of a character vector makes it obvious when some groups contain no observations:
+```{r}
+sex_char <- c("m", "m", "m")
+sex_factor <- factor(sex_char, levels = c("m", "f"))
+
+# `table(x)` returns a frequency table counting the number of elements in each level.
+
+table(sex_char)
+
+table(sex_factor)
+```
+
+### Factor gotchas
+
+Unfortunately, most data loading functions in R automatically convert character vectors to factors. The reason is (probably) that in early versions of R, there was a memory advantage to using factors; that is no longer the case.
+
+Often, this is not what we want.
+
+Instead, we can use the argument stringsAsFactors = FALSE to suppress this behaviour, and then manually convert character vectors to factors using our knowledge of the data.
+
+```{r}
+read.delim("data/gapminderDataFiveYear.txt",stringsAsFactors=FALSE)
+```
+
+A global option (options(stringsAsFactors = FALSE) is available to control this behaviour
+It's not recommended, because it makes it harder to share your code, and it may have unexpected consequences when combined with other code (either from packages, or code that you're source()ing).
+
+Global options make code harder to understand, because they increase the number of lines you need to read to understand what a function is doing. 
+
+---
+
+Atomic vectors and lists are the building blocks for higher dimensional data structures. Atomic vectors extend to matrices and arrays, and lists are used to create data frames.
+
+### Matrix
+
+In R matrices are an extension of the numeric or character vectors. 
+They are not a separate type of object but simply an atomic vector with dimensions; 
+the number of rows and columns.
+
+```{r}
+m <- matrix(nrow = 2, ncol = 2)
+m
+dim(m)
+```
+
+Matrices in R are filled column-wise.
+
+```{r}
+m <- matrix(1:6, nrow = 2, ncol = 3)
+m
+```
+
+Another way to construct a matrix is to bind columns or rows using `cbind()` and `rbind()`.
+
+```{r}
+x <- 1:3
+y <- 10:12
+cbind(x, y)
+rbind(x, y)
+```
+
+You can also use the byrow argument to specify how the matrix is filled. 
+
+Here I want to show you how you can run examlpes from R's own documentation:
+
+```{r}
+?matrix
+example(matrix)
+mdat
+#mdat <- matrix(c(1,2,3, 11,12,13), nrow = 2, ncol = 3, byrow = TRUE,
+#               dimnames = list(c("row1", "row2"),
+#                               c("C.1", "C.2", "C.3")))
+
+```
+
 
 ### Data frame
 
@@ -333,23 +363,18 @@ A data frame is a very important data type in R. It's pretty much the de facto d
 
 A data frame is a special type of list where every element of the list has same length.
 
-Data frames can have additional attributes such as `rownames()`, which can be useful for annotating data, like subject_id or sample_id. But most of the time they are not used.
-
-Some additional information on data frames:
-
-* Usually created by `read.csv()` and `read.table()`.
-* Can convert to matrix with `data.matrix()`
-* Coercion will be forced and not always what you expect.
-* Can also create with `data.frame()` function.
-* Find the number of rows and columns with `nrow(dat)` and `ncol(dat)`, respectively.
-* Rownames are usually 1..n.
-
-## Combining data frames
-
 ```{r}
 dat <- data.frame(id = letters[1:10], x = 1:10, y = 11:20)
 dat
 ```
+
+Data frames can have additional attributes such as `rownames()`, which can be useful for annotating data, like subject_id or sample_id.
+
+Some additional information on data frames:
+
+* Usually created by `read.csv()` ,`read.table()` or `read.delim()`.
+* Can also create with `data.frame()` function.
+* Find the number of rows and columns with `nrow(dat)` and `ncol(dat)`, respectively.
 
 ### Useful functions
 
@@ -362,6 +387,16 @@ dat
 * `names()` - will list the names attribute for a data frame (or any object really), which gives the column names.
 * A data frame is a special type of list where every element of the list has same length.
 
+```{r}
+str(iris)
+nrow(iris)
+ncol(iris)
+head(iris)
+tail(iris)
+names(iris)
+row.names(iris)
+```
+
 See that it is actually a special list:
 
 ```{r}
@@ -369,47 +404,6 @@ is.list(iris)
 class(iris)
 ```
 
-| Dimensions | Homogenous | Heterogeneous |
-| ------- | ---- | ---- |
-| 1-D | atomic vector | list |
-| 2_D | matrix | data frame |
 
-### Indexing
-
-Vectors have positions, these positions are ordered and can be called using name_vector[index]
-
-```{r}
-letters[2]
-```
-
-### Functions
-
-A function is a saved object that takes inputs to perform a task. 
-Functions take in information and return desired outputs.
-
-output = name_of_function(inputs)
-
-```{r}
-x <- 1:10
-y <- sum(x)
-```
-
-### Help
-
-All functions come with help information. 
-It is critical that you learn to read the help screens since they provide important information on what the function does, 
-how it works, and usually sample examples at the very bottom.
-
-### Install new  functions (package management)
-
-`install.packages("package-name")` will download a package from one of the CRAN mirrors assuming that a binary is available for your operating system. If you have not set a preferred CRAN mirror in your options(), then a menu will pop up asking you to choose a location.
-
-Use `old.packages()` to list all your locally installed packages that are now out of date. `update.packages()` will update all packages in the known libraries interactively. This can take a while if you haven't done it recently. To update everything without any user intervention, use the `ask = FALSE` argument.
-
-```{r updating, eval=FALSE}
-update.packages(ask = FALSE)
-```
-
-You can't ever learn all of R, but you can learn how to build a program and how to find help
-to do the things that you want to do. Let's get hands-on.
+OK, Let's get hands-on.
 
