--- a/novice/r/03-starting-with-data.Rmd
+++ b/novice/r/03-starting-with-data.Rmd
@@ -49,7 +49,7 @@ We will use `setwd()` and `read.csv()`. These are built-in functions in R. Let's
 * put it in your working directory for these exercises
 
 ```{r, eval=FALSE}
-setwd("pathname")
+setwd("novice/r/")
 read.csv("data/inflammation-01.csv")
 ```
 
@@ -65,83 +65,6 @@ In this case, that output is the data we just loaded.
 
 Our call to `read.csv` read our file, but didn't save the data in memory. 
 To do that, we need to assign the data frame to a variable. 
-A variable is just a name for a value, such as x, current_temperature, or subject_id. 
-We can create a new variable simply by assigning a value to it using `=` or `<-`
-
-```{r}
-weight_kg <- 55
-```
-
-Once a variable has a value, we can print it:
-
-```{r}
-weight_kg
-```
-
-and do arithmetic with it:
-
-```{r}
-2.2 * weight_kg
-```
-
-We can use the function `paste` to print several things at once, if we separate them with commas.
-
-```{r}
-paste('weight in pounds:', 2.2 * weight_kg)
-```
-
-We can also change a variable's value by assigning it a new one:
-
-```{r}
-weight_kg <- 57.5
-paste('weight in kilograms is now:', weight_kg)
-```
-
-If we imagine the variable as a sticky note with a name written on it, 
-assignment is like putting the sticky note on a particular value:
-
-This means that assigning a value to one variable does not change the values of other variables. 
-For example, let's store the subject's weight in pounds in a variable:
-
-```{r}
-weight_lb <- 2.2 * weight_kg
-paste('weight in kilograms:', weight_kg, 'and in pounds:', weight_lb)
-```
-
-and then change weight_kg:
-
-```{r}
-weight_kg <- 100.0
-paste('weight in kilograms is now:', weight_kg, 'and weight in pounds is still:', weight_lb)
-```
-
-__Updating a Variable__
-
-Since weight_lb doesn't "remember" where its value came from, it isn't automatically updated when weight_kg changes. 
-This is different from the way spreadsheets work.
-
-__Challenges__
-
-Draw diagrams showing what variables refer to what values after each statement in the following program:
-
-```{r}	
-mass <- 47.5
-age  <- 122
-mass <- mass * 2.0
-age  <- age - 20
-```
-
-We can also add to variable that are vectors, and update them by making them longer. 
-For example, if we are creating a vector of patient weights, we could update that vector using `append`. `append` takes two arguments, and adds the second item to the end of the first one.
-
-```{r}
-weights <- c(100)
-weights <- append(weights, 80)
-```
-
-What happens here is that we take the original vector weights, and we are adding the second item to the end of the first one. We can do this over and over again to build a vector or a dataset. As we program, this may be useful to autoupdate results that we are collecting or calculating.
-
-Now that we know how to assign things to variables, let's re-run `read.csv` and save its result:
 
 ```{r}
 dat <- read.csv('data/inflammation-01.csv', header = FALSE)
@@ -167,6 +90,7 @@ First, let's ask what type of thing data refers to:
 ```{r}
 class(dat)
 str(dat)
+summary(dat)
 ```
 
 The output tells us that data currently is a data.frame in R. 
@@ -193,11 +117,11 @@ __Useful functions__
 * `dim()` - see dimensions
 * `nrow()` - number of rows
 * `ncol()` - number of columns
-* `str()` - structure of each column
+* `str()` - the dimensions and the data types (int is integer) of each column.
 * `names()` - will list the names attribute for a data frame (or any object really), which gives the column names.
-* A data frame is a special type of list where every element of the list has same length.
+* `summary()` - will provide useful summary information on the distribution of values
 
-`str` output tells us the dimensions and the data types (int is integer) of each column.
+* A data frame is a special type of list where every element of the list has same length.
 
 We can see what its shape is like this:
 
@@ -209,7 +133,7 @@ ncol(dat)
 
 This tells us that data has 60 rows and 40 columns. 
 
-### Indexing
+### Indexing and subsetting data
 
 If we want to get a single value from the data frame, 
 we must provide an index in square brackets, just as we do in math:
@@ -341,7 +265,7 @@ __EXERCISES__
 What about `data[3:3, 4:1]`? Explain the results to the person sitting next to you
 
 
-## FUNCTIONS - Operations Across Axes
+## Using FUNCTIONS to perform operations across axes
 
 What if we need the maximum inflammation for all patients, or the average for each day? 
 As the diagram below shows, we want to perform the operation across an axis:
@@ -358,6 +282,7 @@ If each row is a patient, and we want to know each patient's average inflammatio
 	
 ```{r}
 avg_inflammation = apply(dat, 2, mean)
+avg_inflammation
 ```
 
 ### Challenge  
@@ -385,6 +310,7 @@ Now that we have all this summary information, we can put it back together into 
 
 ```{r}
 d.summary = data.frame(tempo, avg_inflammation, min_inflammation, max_inflammation)
+d.summary
 ```
 
 ## Plotting  
@@ -405,17 +331,12 @@ plot(tempo, min_inflammation)
 
 The maximum value rises and falls perfectly smoothly, while the minimum seems to be a step function. Neither result seems particularly likely, so either there's a mistake in our calculations or something is wrong with our data.
 
-```{r}
-library(ggplot2)
-ggplot(d.summary, aes(tempo, avg_inflammation)) + geom_point()
-```
 
 __EXERCISES__
 
 1. Create a plot showing the standard deviation of the inflammation data 
 for each day across all patients.
 
-2. Create a ggplot that shows the data as a line. As a histogram. etc.
 
 ## Key Points
 
